--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "strictNullChecks": true,
     "target": "es2016",
     "outDir": "dist",
-    "module": "commonjs",
+    "module": "es6",
     "moduleResolution": "node",
     "sourceMap": true,
     "lib": ["es2016"],
